<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="isProgressBarEnable"
            type="Boolean" />
    </data>

    <RelativeLayout
        android:id="@+id/rl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_16sdp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="start"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/label_phone_number"
                android:textColor="@color/text_color_black_2b"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/label_verification_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/poppins_light"
                android:text="@string/label_mobile_number_verification_message"
                android:textColor="#757575"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight=".35"
                    android:background="@drawable/bg_round_grey"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:padding="5dp"
                    android:weightSum="1">

                    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        app:ccp_textColor="@color/text_color_black_2b" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight=".65"
                    android:background="@drawable/bg_grey_with_corner"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <AutoCompleteTextView
                        android:id="@+id/ac_mobile_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:focusable="true"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/label_enter_mobile_number"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:nextFocusRight="@id/ac_otp_2"
                        android:paddingStart="5dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/text_color_black_2b"
                        android:textColorHint="#A1887F"
                        android:textSize="@dimen/_14sdp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <requestFocus />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_proceed"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_blue_with_corner"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/white"
                android:visibility="@{safeUnbox(isProgressBarEnable)?View.VISIBLE:View.GONE,default = gone}" />

            <TextView
                android:id="@+id/tv_proceed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/button_label_proceed"
                android:textAllCaps="true"
                android:letterSpacing="0.05"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="@{safeUnbox(isProgressBarEnable)?View.GONE:View.VISIBLE,default = visible}" />

        </LinearLayout>

    </RelativeLayout>

</layout>