<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ui.registration.RegistrationActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="userMobileNumber"
            type="String" />

        <variable
            name="isProgressBarEnable"
            type="Boolean" />

    </data>

    <RelativeLayout
        android:id="@+id/rl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/lang_english_code"
                android:layout_gravity="end"
                android:textAllCaps="true"
                android:textColor="@color/text_color_grey_b5"
                android:textSize="@dimen/_16ssp" />

            <LinearLayout
                android:id="@+id/ll_user_profile_photo"
                android:layout_width="@dimen/_78sdp"
                android:layout_height="@dimen/_78sdp"
                android:layout_below="@+id/header_cover_image"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_profile_picture"
                android:elevation="5dp"
                android:padding="@dimen/_10sdp"
                android:visibility="visible">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_user_profile_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/label_todo"
                    android:src="@drawable/bg_inner_profile_pic"
                    android:visibility="visible" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/header_cover_image"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/two_top_side_round_light_grey">

                <LinearLayout
                    android:id="@+id/ll_cover_up"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_61sdp"
                    android:background="@drawable/two_top_side_round_dark_grey"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_95sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/label_setup_your_account_with"
                        android:textColor="@color/text_color_black_66"
                        android:textSize="@dimen/_14ssp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginStart="@dimen/_95sdp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="@{userMobileNumber}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold" />


                </LinearLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_cover_up">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/bg_color_grey_f9"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_marginHorizontal="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:background="@drawable/bg_grey_with_corner"
                            android:baselineAligned="false"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".15"
                                android:background="@drawable/two_left_side_round_grey"
                                android:gravity="center">

                                <com.google.android.material.imageview.ShapeableImageView
                                    android:layout_width="@dimen/_28sdp"
                                    android:layout_height="@dimen/_28sdp"
                                    android:contentDescription="@string/label_todo"
                                    android:src="@drawable/user_icon_blue" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".75"
                                android:background="@drawable/two_right_side_round_grey"
                                android:gravity="center"
                                android:orientation="vertical">

                                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                                    android:id="@+id/ac_first_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent"
                                    android:focusable="true"
                                    android:fontFamily="@font/poppins_regular"
                                    android:hint="@string/hint_first_name"
                                    android:imeOptions="actionNext"
                                    android:inputType="textCapSentences"
                                    android:nextFocusDown="@id/ac_last_name"
                                    android:paddingHorizontal="@dimen/_15sdp"
                                    android:textColorHint="#BDBDBD"
                                    android:textSize="@dimen/_16ssp"
                                    tools:ignore="RtlSymmetry" />

                                <requestFocus />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_marginHorizontal="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:background="@drawable/bg_grey_with_corner"
                            android:baselineAligned="false"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".15"
                                android:background="@drawable/two_left_side_round_grey"
                                android:gravity="center">

                                <com.google.android.material.imageview.ShapeableImageView
                                    android:layout_width="@dimen/_28sdp"
                                    android:layout_height="@dimen/_28sdp"
                                    android:contentDescription="@string/label_todo"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/user_icon_blue" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".75"
                                android:background="@drawable/two_right_side_round_grey"
                                android:gravity="center">

                                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                                    android:id="@+id/ac_last_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent"
                                    android:focusable="true"
                                    android:fontFamily="@font/poppins_regular"
                                    android:hint="@string/hint_last_name"
                                    android:imeOptions="actionNext"
                                    android:inputType="textCapSentences"
                                    android:nextFocusDown="@id/ac_email"
                                    android:paddingHorizontal="@dimen/_15sdp"
                                    android:textColorHint="#BDBDBD"
                                    android:textSize="@dimen/_16ssp"
                                    tools:ignore="RtlSymmetry" />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_marginHorizontal="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:background="@drawable/bg_grey_with_corner"
                            android:baselineAligned="false"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".15"
                                android:background="@drawable/two_left_side_round_grey"
                                android:gravity="center">

                                <com.google.android.material.imageview.ShapeableImageView
                                    android:layout_width="@dimen/_28sdp"
                                    android:layout_height="@dimen/_28sdp"
                                    android:contentDescription="@string/label_todo"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/icon_email" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".75"
                                android:background="@drawable/two_right_side_round_grey"
                                android:gravity="center">

                                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                                    android:id="@+id/ac_email"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent"
                                    android:focusable="true"
                                    android:fontFamily="@font/poppins_regular"
                                    android:hint="@string/hint_email"
                                    android:imeOptions="actionDone"
                                    android:inputType="textEmailAddress"
                                    android:paddingHorizontal="@dimen/_15sdp"
                                    android:textColorHint="#BDBDBD"
                                    android:textSize="@dimen/_16ssp"
                                    tools:ignore="RtlSymmetry" />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:layout_marginBottom="@dimen/_65sdp"
                            android:gravity="start|center"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/chk_terms"
                                android:layout_width="@dimen/_32sdp"
                                android:layout_height="@dimen/_32sdp"
                                android:buttonTint="@color/app_blue" />

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_light"
                                android:text="@string/label_i_agree_with"
                                android:textColor="@color/text_color_black_66"
                                android:textSize="@dimen/_14ssp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_3sdp"
                                android:fontFamily="@font/poppins_light"
                                android:text="@string/label_terms_conditions"
                                android:textColor="@color/text_color_purple"
                                android:textSize="@dimen/_14ssp" />
                        </LinearLayout>

                    </LinearLayout>

                </ScrollView>


            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_blue_with_corner"
            android:gravity="center"
            android:layout_marginVertical="@dimen/_15sdp"
            android:orientation="vertical">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="@{safeUnbox(isProgressBarEnable)?View.VISIBLE:View.GONE,default = gone}"
                android:indeterminateTint="@color/white"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/button_label_register"
                android:textAllCaps="true"
                android:visibility="@{safeUnbox(isProgressBarEnable)?View.GONE:View.VISIBLE,default = visible}"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />

        </LinearLayout>

    </RelativeLayout>

</layout>